--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,10 @@ version: '2'
 services:
     postgres:
         image: postgres
+        environment:
+            POSTGRES_DB: teste_escale_db
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: postgres
         ports:
             - '5433:5432'
     php:
